--- a/web/quiz_applet.css
+++ b/web/quiz_applet.css
@@ -29,3 +29,11 @@ html {
 }
 
 .katex { font-size: 2em !important; }
+
+#answer {
+    font-family: "CMU Serif" !important;
+    border-radius: 4px 4px 4px 4px;
+    border-color: #F0F0F0;
+    border-width: 3px;
+    padding: 15px;
+}
