Dashboard, registration add

--- a/web/templates/dashboard_fresh.html
+++ b/web/templates/dashboard_fresh.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-3"></div>
-                    <a href="/quiz"><div class="col-md-3 text-center"><button class="btn btn-success btn-lg">Launch...</button></div></a>
+                    <a href="/_generate_mcat_exam"><div class="col-md-3 text-center"><button class="btn btn-primary btn-lg">Generate new MCAT Exam...</button></div></a>
                     <div class="col-md-3"></div>
                 </div>
             </div>
