--- a/web/templates/register_success.html
+++ b/web/templates/register_success.html
@@ -4,7 +4,9 @@
 
 {% block body %}
 
-<h3>Registration was a success!</h3>
-<a href="login"><h3>Login...</h3></a>
+    <h3>Registration was a success!</h3>
+    <h3>An email has been sent to your email address with a confirmation link.</h3>
+    <h4>Please confirm your email address before signing in.</h4>
+    <a href="login"><h3>Login...</h3></a>
 
 {% endblock %}
