--- a/app/static/base.css
+++ b/app/static/base.css
@@ -1,14 +1,17 @@
 body {
     /* min-height: 100vh;
     min-width: 100vw; */
+    width: 100vw;
     background-color: rgb(246, 245, 250);
     padding: 0;
     margin: 0;
 }
 
+
 .sidebar-image {
     width: 40px;
     height: 40px;
+    padding: 0;
 }
 
 .sidebar {
@@ -16,6 +19,8 @@ body {
     min-height: 100vh;
     /* width: 120px; */
     padding-top: 30px;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
     /* padding-left: 15px; */
     /* margin-right: 3%; */
 }
